# xorai

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp
lib/xorai/: activation.h  config.h  matrix.h  model (copy 1).h  model.h  network.h  types.h
src/: activation.cpp  matrix.cpp  model.cpp  network.cpp
